syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shegami.authservice";
option java_outer_classname = "UserAccountProto";

package usermanagementservice;

// Service definition
service UserAccountService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc AddNewUser (AddNewUserRequest) returns (AddNewUserResponse);
}

message AddNewUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
  Address address = 6; // Optional field
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
  string country = 5;
}


message AddNewUserResponse {
  bool created = 1;
}
// Request message
message UserRequest {
  string email = 1;
}



// Response message
message UserResponse {
  string id = 1;
  string email = 2;
  string password = 3;
  repeated Type types = 4;
}

// Role message
message Type {
  string id = 1;
  string name = 2;
}